--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 
+# Connection information
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+spring.h2.console.settings.trace=false
+
+spring.h2.console.settings.web-allow-others=true
+
+spring.datasource.initialize=false
+spring.jpa.hibernate.ddl-auto=update
+
+##########################################
+# Connection string
+##########################################
+
+# Persistent data storage
+# Mac:
+#   spring.datasource.url = /Users/laurenworkman/Library/Mobile Documents/com~apple~CloudDocs/CoderGirl Projects/FirstProj
+# PC:
+#   spring.datasource.url = /Users/laurenworkman/Library/Mobile Documents/com~apple~CloudDocs/CoderGirl Projects/FirstProj
+
+#spring.datasource.url= /Users/laurenworkman/Library/Mobile Documents/com~apple~CloudDocs/CoderGirlProjects/FirstProj
+
+spring.datasource.url = jdbc:h2:./src/main/db/bookshelf
+
