--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<!--<configuration>-->
+		<!--<jvmArguments>-->
+			<!-- -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005-->
+		<!--</jvmArguments>-->
+	<!--</configuration>-->
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -38,6 +44,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -45,6 +52,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+
+		<!--<dependency>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-jdbc</artifactId>-->
+			<!--<version>3.2.1.RELEASE</version>-->
+		<!--</dependency>-->
+
+
+
 	</dependencies>
 
 	<build>
